4-clubweb/06-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  generation: 1
  name: web-ingress
spec:
  tls:
    - hosts:
      - preview.dotnetclub.net
      secretName: web-certificate-preview
    - hosts:
      - dotnetclub.net
      secretName: web-certificate-club
  rules:
    - host: preview.dotnetclub.net
      http:
        paths:
        - backend:
            serviceName: web-svc
            servicePort: 80
          path: /
    - host: dotnetclub.net
      http:
        paths:
        - backend:
            serviceName: web-svc
            servicePort: 80
          path: /
